3月4日晚提交 项目基本完成了

--- a/GiftTalk/app/src/main/AndroidManifest.xml
+++ b/GiftTalk/app/src/main/AndroidManifest.xml
@@ -31,7 +31,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activity.MainActivity"/>
+        <activity android:name=".activity.MainActivity"
+           />
         <activity android:name=".activity.WelcomeActivity"/>
         <activity android:name=".activity.HomeContentActivity"/>
         <activity android:name=".activity.GiftContentActivity"/>
